--- a/src/style/Containers.css
+++ b/src/style/Containers.css
@@ -5,13 +5,179 @@
 
 .float-container {
     position: absolute;
+    height: 100vh;
+    width: 100vw;
     z-index: 100;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: grid;
+    align-content: center;
+    justify-content: center;
 }
 
 .card {
     background-color: white;
+    max-width: 60vw;
+    min-height: 60vh;
+    filter: var(--drop-shadow);
+    border-radius: 10px;
+}
+
+.card.dialogue.float {
+    position: absolute;
+}
+
+.card-menubar {
+    height: 40px;
+    background-color: var(--titlebar-bg);
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.card-content {
     padding: 10px;
-    margin: 5px;
-    filter: var(--drop-shadow)
+}
+
+.close-button {
+    position: absolute;
+    line-height: 5px;
+    padding: 17.5px;
+    right: 0px;
+    border-top-right-radius: 10px;
+    background-color:rgb(4, 28, 49);
+    color: var(--card-base-light);
+    font-weight: 500;
+}
+
+.close-button:hover {
+    background-color: rgb(238, 49, 49);
+    cursor: pointer;
+    font-weight: 550;
+}
+
+.card-title {
+    color: var(--card-base-light);
+    position: absolute;
+    left: 10px;
+    top:10px;
+    font-weight: 600;
+}
+
+.text-area {
+    min-width: 100px;
+    min-height: 50px;
+}
+
+/*User info card customizations*/
+#user-info-card {
+    width: 60vw;
+    min-height: fit-content;
+}
+
+#user-card-content {
+    display: grid;
+    row-gap: 10px;
+}
+
+.user-info-item {
+    display: flex;
+    gap: 5px;
+}
+
+#user-fullname {
+    text-align: left;
+    font-size: 25px;
+    font-weight: 800;
+}
+#user-username #user-usertitle {
+    text-align: left;
+    font-size: 15px;
+}
+
+#user-usertitle {
+    font-weight: 700;
+}
+
+#job-info, #personal-info {
+    padding: 0px;
+    border: 2px solid var(--titlebar-bg);
+    background-color: rgb(250, 250, 250);
+    border-radius: 10px;
+}
+
+#personal-info>.card-menubar, #job-info>.card-menubar {
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+#job-card-title, #personal-card-title {
+    position: relative;
+}
+
+#job-info-contents>div, #personal-info-contents>div {
+    margin: 10px;
+}
+
+.text-area.user-info-form {
+    width: 80%;
+    height: 20%;
+}
+
+.button-row {
+    display: flex;
+    justify-content: end;
+}
+
+#user-info-save {
+    width: fit-content;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: var(--included-border);
+}
+
+#user-info-save:hover {
+    background-color: var(--included-border-hover);
+    cursor: pointer;
+}
+
+#user-info-confirm-close {
+    min-width: 20vw;
+    min-height: 10vh;
+    display: grid;
+    padding: 10px;
+    align-self: center;
+    justify-self: center;
+}
+
+#user-info-confirm-close>div {
+    display: flex;
+    gap:10px;
+    padding: 5px;
+    justify-content: center;
+}
+
+#user-info-confirm-close>div>.action-button {
+    height: 50px;
+    width: 120px;
+    line-height: 15px;
+    display: flex;
+    padding-left: 5px;
+    padding-right: 5px;
+    align-items: center;
+    justify-content: center;
+    max-lines: 2;
+    background-color: var(--included-border)
+}
+
+#user-info-confirm-close>div>.action-button:hover {
+    background-color: var(--included-border-hover);
+}
+
+/*Red button for close without save*/
+#user-info-confirm-close>div>#close-no-save {
+    background-color: var(--excluded-border);
+}
+#user-info-confirm-close>div>#close-no-save:hover {
+    background-color: var(--excluded-border-hover);
 }
