Updates to generic components

--- a/src/style/Containers.css
+++ b/src/style/Containers.css
@@ -1,6 +1,17 @@
 .container {
-    height: calc(100vh - 90px);
+    height: calc(100vh - 200px);
     width: 100vw;
+}
+
+.app-container {
+    position: absolute;
+    height: calc(100vh - 40px);
+    width: 100vw;
+}
+
+.flex-half-n-half {
+    display: flex;
+    grid-template-columns: 50% 50%;
 }
 
 .float-container {
@@ -12,6 +23,16 @@
     display: grid;
     align-content: center;
     justify-content: center;
+}
+
+.header {
+    height: 8vh;
+    padding: 10px;
+}
+
+.header-text {
+    height: 100%;
+    font-size: 40px;
 }
 
 .card {
@@ -69,20 +90,58 @@
     max-height: 100px;
 }
 
-/*User info card customizations*/
-#user-info-card {
-    width: 60vw;
-    min-height: fit-content;
+input {
+    border: 0; 
+    padding: 3px 7px; 
+    border: 1px solid #ccc; 
+    position: relative; 
+    background-color: var(--card-base-light);
+    border-radius: 5px;
+    height: fit-content;
+    color: rgb(50,50,50);
 }
 
-#user-card-content {
-    display: grid;
-    row-gap: 10px;
+input:focus {
+    outline: none;
+    background-color: #ccc;
+    color: rgb(25,25,25);
 }
 
 .user-info-item {
     display: flex;
     gap: 5px;
+}
+
+.form-info-item {
+    display: flex;
+    align-items: start;
+    justify-items:flex-start;
+    justify-content: end;
+    gap: 5px;
+    text-align: left;
+}
+
+.form-info-item>div {
+    width: 100%;
+}
+
+/*User info card customizations*/
+#personal-info-contents>.form-info-item>div {
+    width: 15%;
+}
+
+#user-info-card {
+    width: 60vw;
+    min-height: fit-content;
+}
+
+#personal-info-contents>.form-info-item {
+    justify-content: start;
+}
+
+#user-card-content {
+    display: grid;
+    row-gap: 10px;
 }
 
 #user-fullname {
@@ -245,4 +304,54 @@
 
 .dropdown-list>.Search-Bar {
     max-width: 125px;
+}
+
+/*Spiff app customization*/
+
+/*Spiff card*/
+#spiff-card {
+    min-width: 95vw;
+    min-height:calc(75vh - 80px);
+    margin-left:2.5vw;
+    margin-right:2.5vw;
+    margin-top: 2.5vh;
+}
+
+#spiff-card-card-content {
+    width: 100%;
+    height:50vh;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+#spiff-card-card-content>.top-bar {
+    width:100%
+}
+
+#spiff-card-card-content>.data-table>.tablerow, #spiff-card-card-content>.tablerow {
+    grid-template-columns: 9% 9% 9% 15% 9% 9% 21% 9% 9% 9% 9%;
+    height: 10vh;
+}
+#spiff-card-card-content>.tablerow {
+    margin-top: 40px;
+    font-weight: 600;
+    height: 2vh;
+}
+#spiff-card-card-content>.data-table{
+    height: 55vh;
+}
+  
+#spiff-filter-card {
+    min-height: 20vh;
+    max-width: 50vw;
+    margin-left:2.5vw;
+    margin-right:2.5vw;
+    margin-top: 2.5vh;
+}
+
+#spiff-filter-card-card-content {
+    width: 95%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 20px;
 }
