--- a/src/style/MenuBar.css
+++ b/src/style/MenuBar.css
@@ -33,9 +33,15 @@
 
 .menu-button {
     width: 100%;
-    background-color: rgb(36, 119, 192);
+    background-color: rgb(12, 86, 149);
+    color:var(--card-base-light);
+    font-size: 25px;
     height: 50px;
     line-height: 50px;
+}
+
+.menu-button.selected {
+    background-color: rgb(16, 59, 97);
 }
 
 .menu-button:hover {
